--- a/logging-solution/build.gradle
+++ b/logging-solution/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'ch.qos.logback:logback-classic:1.2.6'
 }
 
 tasks.named('test') {
